<resources>
    <string name="app_name">Out_of_Business_Cards</string>
    <string name="company_hint">会社名</string>
    <string name="postal_hint">郵便番号</string>
    <string name="address_hint">住所</string>
    <string name="tel_hint">電話番号</string>
    <string name="fax_hint">FAX番号</string>
    <string name="email_hint">Emailアドレス</string>
    <string name="url_hint">URL</string>
    <string name="position_hint">部署and役職</string>
    <string name="name_hint">名前</string>
    <string name="save_text">保存</string>
    <string name="cancel_text">キャンセル</string>
    <string name="edit_text">編集</string>


</resources>
