<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B0A0A"
    tools:context=".EditActivity">


    <EditText
        android:id="@+id/companyEdit"
        android:inputType="text"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/company_hint"
        />

    <EditText
        android:id="@+id/postalEdit"
        android:inputType="number"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/companyEdit"
        app:layout_constraintTop_toBottomOf="@id/companyEdit"
        android:text="@string/postal_hint"
        />

    <EditText
        android:id="@+id/addressEdit"
        android:inputType="textPostalAddress"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/postalEdit"
        app:layout_constraintStart_toStartOf="@id/postalEdit"
        android:layout_marginTop="8dp"
        android:text="@string/address_hint"
        />

    <EditText
        android:id="@+id/telEdit"
        android:inputType="phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addressEdit"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/addressEdit"
        android:text="@string/tel_hint"
        />

    <EditText
        android:id="@+id/faxEdit"
        android:inputType="phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/telEdit"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/telEdit"
        android:text="@string/fax_hint"
        />

    <EditText
        android:id="@+id/emailEdit"
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/faxEdit"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@id/faxEdit"
        android:text="@string/email_hint"
        />

    <EditText
        android:id="@+id/urlEdit"
        android:inputType="textUri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/emailEdit"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/emailEdit"
        android:text="@string/url_hint"
        />

    <EditText
        android:id="@+id/positionEdit"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/urlEdit"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/urlEdit"
        android:text="@string/position_hint"
        />

    <EditText
        android:id="@+id/nameEdit"
        android:inputType="textPostalAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/positionEdit"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/positionEdit"
        android:text="@string/name_hint"
        />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nameEdit"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@id/nameEdit"
        android:text="@string/save_text"
        />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/saveBtn"
        android:layout_marginLeft="24dp"
        app:layout_constraintTop_toTopOf="@id/saveBtn"
        android:text="@string/cancel_text"
        />

</androidx.constraintlayout.widget.ConstraintLayout>